created external style sheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Part1</title>
         <meta charset=utf-8>
+        <link rel="stylesheet" href="mystyle.css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -10,7 +11,7 @@
     </head>
     <body>
         <header>
-            <h1>First Meeting Minutes</h1>
+            <h1 id="title">First Meeting Minutes</h1>
             <h3>Date: 10/4/2022</h3>
         </header>
 
