--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
         <nav>
             <h2>Sections:</h2>
+            <section id="contents">
             Present<br>
             Agenda<br>
             Meeting Notes<br>
             Conclusion
+            </section>
         </nav>
         <section>
             <h2>Present:</h2>
