--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <h2>Present:</h2>
             <p>Paul Nguyen</p>
         </section>
-        <section>
+    
+        <section id="agenda">
             <h2>Agenda:</h2>
             <img src="https://www.computerhope.com/jargon/h/html-head.jpg" 
             alt="html image" width="150" height="150">
