pseudo-class finished

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header>
             <h1 id="title">First Meeting Minutes</h1>
             <h3>Date: 10/4/2022</h3>
+            <a href="https://github.com/pdn002">Github</a>
         </header>
 
         <hr>
