--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
         <nav>
             <h2>Sections:</h2>
-            <section id="contents">
+            <section>
             Present<br>
             Agenda<br>
             Meeting Notes<br>
             Conclusion
             </section>
         </nav>
-        <section>
+        <section id="present">
             <h2>Present:</h2>
             <p>Paul Nguyen</p>
         </section>
@@ -47,7 +47,7 @@
                     <source src="Pexels Videos 2516160.mp4" type="video/mp4">
                 </video>
             </section>
-            <section id="media2">
+            <section class="media2">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/1200px-CSS3_logo_and_wordmark.svg.png" 
             id="css" alt="html image" width="150" height="200">
                 <img src="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics/css-declaration-small.png" 
