inline and internal CSS

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
+        <style>
+            Footer{
+                font-size: 15Q;
+                display: inline;
+            }
+        </style>
     </head>
     <body>
         <header>
-            <h1 id="title">First Meeting Minutes</h1>
+            <h1 style="color: rgb(0, 222, 255);font-size: 8ex;">First Meeting Minutes</h1>
             <h3>Date: 10/4/2022</h3>
             <a href="https://github.com/pdn002">Github</a>
         </header>
