--- a/index.html
+++ b/index.html
@@ -113,6 +113,41 @@
                 type="audio/mpeg">
             </audio>
         </section>
+        
+        <section id="Extra">
+            <h2>Extra:</h2>
+            <form>
+                <fieldset>
+                    <label>Favorite Food:</label>
+                    <input type="text"><br>
+                    <label>Why is this your favorite food:</label>
+                    <textarea rows="4" cols="50">___ is my favorite because...</textarea><br>
+                    <label>Favorite Drink:</label>
+                    <input type="text"><br>
+                </fieldset>
+                <fieldset>
+                    <label>Favorite Programming language in list:</label>
+                    <input list="language" name="language">
+                    <datalist id="language">
+                      <option value="C++">
+                      <option value="Java">
+                      <option value="Python">
+                    </datalist>
+                    <input type="submit">
+                </fieldset>
+                <fieldset>
+                    <label>Is water wet</label>
+                    <select>
+                        <option value="yes">yes</option>
+                        <option value="no">no</option>
+                    </select>
+                </fieldset>
+                <fieldset>
+                    <button type="button">Do not click</button>
+                </fieldset>
+                
+            </form>
+        </section>
 
         <hr>
 
